# prufa-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: README.md
examples/: prufa-scan.yml
examples/nextjs-app/: README.md  audit.py
examples/stripe-checkout/: README.md  audit.py
examples/vite-spa/: README.md  audit.py
prufa_mcp/: __init__.py  audit.py  server.py
tests/: test_audit.py
