[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prufa-mcp"
version = "0.1.0"
description = "The QA agent for your vibe-coded app. Apache-2.0 MCP server."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Prufa", email = "team@prufa.dev" },
]
keywords = ["mcp", "qa", "testing", "browser-automation", "vibe-coding", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "build>=1.0.0",
  "twine>=5.0.0",
]

[project.scripts]
prufa-mcp = "prufa_mcp.server:main"

[project.urls]
Homepage = "https://prufa.dev"
Repository = "https://github.com/prufa-dev/prufa-mcp"
Issues = "https://github.com/prufa-dev/prufa-mcp/issues"

[tool.setuptools]
packages = ["prufa_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
